play game menu has been fixed, contrast color text has been added

--- a/src/components/games/Games.module.scss
+++ b/src/components/games/Games.module.scss
@@ -193,24 +193,11 @@
 
 @media screen and (min-width: 600px) {
   .container {
-
     flex-direction: row;
   }
 
 }
 
-// @media screen and (orientation:landscape) {
-//   .container {
-//     // flex-direction: column;
-//     margin: 0;
-//   }
-
-//   .cardSize {
-//     /* margin: auto; */
-//     height: 50%;
-//     width: 100%;
-//   }
-// }
 //landshaft
 @media screen and (min-width: 600px) and (max-height: 600px) {
   .container {
@@ -227,7 +214,7 @@
   }
 
   .cardSize {
-    /* margin: auto; */
+    margin: auto;
     height: 50%;
     width: 100%;
   }
